fix contrast on nav links

--- a/css/johanns-top-notch-site-217494.webflow.css
+++ b/css/johanns-top-notch-site-217494.webflow.css
@@ -3569,7 +3569,7 @@ img {
 }
 
 .nav-link-2 {
-  color: #fefefe;
+  color: black;
   text-align: left;
   text-transform: uppercase;
   font-size: 23px;
@@ -3590,7 +3590,7 @@ img {
 }
 
 .nav-link-2.w--current {
-  color: #fff;
+  color: black;
 }
 
 .nav-link-2-copy {
